--- a/package.json
+++ b/package.json
@@ -12,18 +12,17 @@
     "next": "14.2.33",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.12.0"
+    "react-icons": "^4.12.0",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.4.0"
   },
   "devDependencies": {
     "@types/node": "^20.10.6",
     "@types/react": "^18.2.46",
     "@types/react-dom": "^18.2.18",
-    "autoprefixer": "^10.4.16",
     "eslint": "^8.56.0",
     "eslint-config-next": "14.2.33",
-    "postcss": "^8.4.32",
-    "tailwindcss": "^3.4.0",
     "typescript": "^5.3.3"
   }
 }
-
