--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "scripts": {
     "dev": "next dev -p 3000",
     "build": "next build",
-    "start": "node start-server.js",
-    "start:standalone": "node .next/standalone/server.js",
-    "start:fallback": "next start",
+    "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
